# LOOM-Memoria-De-Intelligencia-

./: .gitignore  AI_MEMORY_ACCESS_LAYER_COMPLETE.md  AI_MEMORY_QUICK_START.md  COMPLETED_SLACK_AND_PORTFOLIO.md  Dockerfile  EDUAGI_COMPLETE.md  EDUAGI_PWA_README.md  EDUAGI_README.md  FINAL_INTEGRATION_SUMMARY.md  LICENSE  Makefile  PATTERN-SYNTHESIS.md  PROTOCOLS_IMPLEMENTED.md  QUICK_START.md  README.md  SLACK_AGI_DIVISION_COMPLETE.md  SLACK_BOT_README.md  SLACK_FIX_MESSAGING.md  SLACK_INSTANT_SETUP.md  SLACK_TEST_NOW.md  SLACK_V2_README.md  SYSTEM_DOCUMENTATION.md  V2_COMPLETE_SUMMARY.md  V2_INTEGRATION_COMPLETE.md  docker-entrypoint.sh  package.json
.github/: copilot-instructions.md
cloudflare-workers/: README.md  blockchain-edge.js  vigilia-edge.js  wrangler.toml
colab/: MEDINA_PACKEST_5_ALPHA_OMEGA.ipynb  README.md
docs/: MEDINA_ARCHITECTURE_OVERVIEW.md  alpha-charter.html  anima-micro.js  architecture-map.md  cloudflare-edge-revolution.md  command-center.html  context-worker.js  de-agi-structura-sdk.html  de-animo-cascadae.html  de-chartis.html  de-lingua.html  de-programmatione-autonoma.html  de-scriptis-cogitationis.html  deployment-manifest.md  deps-report.md  economy-report.md  edge-gate-strategy.md  eduagi-demo.html  eduagi-pwa.html  engine-worker.js  evolution-report.md  fleet-status.md  health-dashboard.md  index.html  manifest.json  memory-worker.js  organism-atlas.md  organism-bridge.js  papers-worker.js  (+14 more)
rust/medina_crypto/: Cargo.toml
rust/medina_crypto/src/: anima_hash.rs  constants.rs  lib.rs  merkle.rs  phi_mix.rs  three_hearts_keys.rs
(+1004 files in other folders)
